2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix bugtracker issue 2924.
	* Fix bugtracker issue 2925.
	* Make direct_mail conflict with plugin_mgm

2006-03-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix bugtracker issue 2821.
	* Eliminate use of deprecated $TYPO3_DB->sql($db,$query) to ensure dbal compliance.

2006-03-15 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Systematic review and adjustment of all SQL queries to ensure compatibility with dbal system extension.

2006-03-10 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to typo error in locallang_mod_web_txdirectmailM1.xml

2006-03-07 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Honor return path and defer mode settings in dmailer_sendSimple.
	* Do not display the statistics option for direct mails that where sent to a list of addresses (they are not available).
	* In the Direct Mails function, do not display direct mails that were already sent.
	* In list of pages not yet direct mails, do not display pages that are hidden or with restricted-access (they cannot be fetched).
	* Update to module context sensitive help and manual.
	* Correction to XCLASS declaration in res/scripts/class.tx_directmail_ttnews_plaintext.php
	* Update to ext_emconf.php

2006-03-06 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Remove unknown field "description" from the list $this->fieldlist in class.mod_web_dmail.php
	* Various changes to the user interface.
	* Completed manual.
	* Update module context sensitive help.

2006-03-05 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Minor adjustments to tables csh files.
	* Complete csh help in English and French for sys_dmail_category table.
	* Update section of manual: Categorizing newsletter content.
	* Rename and reorganize module locallang files in mod directory.
	* Add module csh file locallang_csh_web_txdirectmailM1.xml