@@ -1,7 +1,10 @@
 2006-03-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Fix bugtracker issue 2924.
 	* Fix bugtracker issue 2925.
-	* Make direct_mail conflict with plugin_mgm
+	* Make direct_mail conflict with plugin_mgm.
+	* Remove reference to t3lib_extMgm::extPath('direct_mail') in ext_update.php. Fix issue 2920.
+	* Do not allow database update before the extension is installed (TCA not yet initialised). Fix issue 2920.
+	* Remove reference to t3lib_extMgm::extPath('direct_mail') in require_once in class.mod_wed_dmail.php.
 
 2006-03-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Fix bugtracker issue 2821.
